# ZHINENGWorkspace

./: .gitignore
Embedded_Code/ESP-IDF-MicProbe/: AGENTS.md  CMakeLists.txt  README.md  agent.md  sdkconfig  sdkconfig.defaults
Embedded_Code/ESP-IDF-MicProbe/main/: CMakeLists.txt  app_main.c
Embedded_Code/ESP-IDF-Workspace/: CMakeLists.txt  agent.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Embedded_Code/ESP-IDF-Workspace/components/ai_wrapper/: CMakeLists.txt  ai_wrapper.cpp  ai_wrapper.h  audiosense_model.tflite  idf_component.yml
Embedded_Code/ESP-IDF-Workspace/components/drivers/: CMakeLists.txt  drv_ble.c  drv_ble.h  drv_haptic.c  drv_haptic.h  drv_i2c_bus.c  drv_i2c_bus.h  drv_imu.c  drv_imu.h  drv_oled.c  drv_oled.h  drv_pdm_dma.c  drv_pdm_dma.h  drv_sim.c  drv_sim.h
Embedded_Code/ESP-IDF-Workspace/components/dsp_kernel/: CMakeLists.txt  dsp_common.c  dsp_common.h  dsp_config.h  dsp_filter.c  dsp_filter.h  dsp_gcc_phat.c  dsp_gcc_phat.h  dsp_mel.c  dsp_mel.h  dsp_noise_tracker.c  dsp_noise_tracker.h  dsp_threat_tracker.c  dsp_threat_tracker.h  mel_filterbank.c
Embedded_Code/ESP-IDF-Workspace/main/: CMakeLists.txt  app_config.h  app_freertos.c  app_freertos.h  app_main.c  app_types.h
Embedded_Code/ESP-IDF-Workspace/main/tasks/: task_adaptive.c  task_ai.c  task_audio.c  task_ble.c  task_decision.c  task_doa_feature.c  task_gui.c  task_gui_fast.c  task_haptic.c  task_orientation.c
Embedded_Code/ESP-IDF-Workspace/models/: audiosense.espdl
